testdata/typechecker/error/portfolio_FuncTooManyArgs.java
// Tests that function calls with too many arguments error.

int main() {
    f(0, 1);
    return 0;
}

int f(int a) {
    return 0;
}
